src/test/deca/context/valid/NullLiteral.deca
// Description:
//    test simple null
//
// Resultats:
//    ok
// 
// Historique:
//    cree le 01/01/2022
{
    null;
}