src/test/deca/context/invalid/provided/double-init.deca
// Description:
//    Initialization
//
// Resultats:
//    Ligne 12: Cdouble 
// 
// Historique:
//    cree le 01/01/2022

{
   int a;
   boolean a;
}